--- a/keras-embeddings-script-mode/keras-embeddings.ipynb
+++ b/keras-embeddings-script-mode/keras-embeddings.ipynb
@@ -254,6 +254,7 @@
     "                  }\n",
     "\n",
     "local_estimator = TensorFlow(entry_point='train.py',\n",
+    "                       source_dir='code',\n",
     "                       model_dir=model_dir,\n",
     "                       train_instance_type=train_instance_type,\n",
     "                       train_instance_count=1,\n",
@@ -331,6 +332,7 @@
     "                  }\n",
     "\n",
     "estimator = TensorFlow(entry_point='train.py',\n",
+    "                       source_dir='code',\n",
     "                       model_dir=model_dir,\n",
     "                       train_instance_type=train_instance_type,\n",
     "                       train_instance_count=1,\n",
