--- a/tf-eager-script-mode/tf-eager-sm-scriptmode.ipynb
+++ b/tf-eager-script-mode/tf-eager-sm-scriptmode.ipynb
@@ -128,8 +128,9 @@
     "\n",
     "model_dir = '/opt/ml/model'\n",
     "train_instance_type = 'local'\n",
-    "hyperparameters = {'epochs': 10, 'batch_size': 128}\n",
+    "hyperparameters = {'epochs': 2, 'batch_size': 128}\n",
     "local_estimator = TensorFlow(entry_point='train.py',\n",
+    "                       source_dir='train_model',\n",
     "                       model_dir=model_dir,\n",
     "                       train_instance_type=train_instance_type,\n",
     "                       train_instance_count=1,\n",
@@ -179,26 +180,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After the model checkpoint has been retrieved, we can load (\"restore\") it.  Keep in mind that this is a checkpoint rather than a model in TensorFlow's SavedModel format, which is necessary for TensorFlow Serving.  In the section below on hosted endpoints, we'll use a SavedModel to serve predictions with TensorFlow Serving."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tensorflow.contrib.eager.python import tfe\n",
-    "\n",
-    "def get_model():\n",
-    "    \n",
-    "    inputs = tf.keras.Input(shape=(13,))\n",
-    "    hidden_1 = tf.keras.layers.Dense(13, activation='tanh')(inputs)\n",
-    "    hidden_2 = tf.keras.layers.Dense(6, activation='sigmoid')(hidden_1)\n",
-    "    outputs = tf.keras.layers.Dense(1)(hidden_2)\n",
-    "    return tf.keras.Model(inputs=inputs, outputs=outputs)\n",
+    "from train_model import model_def\n",
     "\n",
     "tf.keras.backend.clear_session()\n",
     "device = '/cpu:0' \n",
     "\n",
     "with tf.device(device):    \n",
-    "    local_model = get_model()\n",
+    "    local_model = model_def.get_model()\n",
     "    saver = tfe.Saver(local_model.variables)\n",
     "    saver.restore('local_model/weights.ckpt')"
    ]
@@ -207,7 +208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With the saved model restored, we can now generate predictions and compare them to the actual housing prices in the test set. The values are in units of $1000s. In case you're wondering why the actual values seem relatively low compared to today's big city housing prices:  the paper referencing the dataset was originally published in 1978. "
+    "With the model checkpoint restored, we can now generate predictions and compare them to the actual housing prices in the test set. The values are in units of $1000s. In case you're wondering why the actual values seem relatively low compared to today's big city housing prices:  the paper referencing the dataset was originally published in 1978. "
    ]
   },
   {
@@ -273,10 +274,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_instance_type = 'ml.c4.xlarge'\n",
+    "train_instance_type = 'ml.c5.xlarge'\n",
     "hyperparameters = {'epochs': 30, 'batch_size': 128}\n",
     "\n",
     "estimator = TensorFlow(entry_point='train.py',\n",
+    "                       source_dir='train_model',\n",
     "                       model_dir=model_dir,\n",
     "                       train_instance_type=train_instance_type,\n",
     "                       train_instance_count=1,\n",
@@ -332,7 +334,7 @@
     "device = '/cpu:0' \n",
     "\n",
     "with tf.device(device):    \n",
-    "    model = get_model()\n",
+    "    model = model_def.get_model()\n",
     "    saver = tfe.Saver(model.variables)\n",
     "    saver.restore('model/weights.ckpt')"
    ]
@@ -367,7 +369,7 @@
    },
    "outputs": [],
    "source": [
-    "predictor = estimator.deploy(initial_instance_count=1,instance_type='ml.m4.xlarge')"
+    "predictor = estimator.deploy(initial_instance_count=1,instance_type='ml.m5.xlarge')"
    ]
   },
   {
