--- a/tf-horovod-inference/tf-horovod-inference.ipynb
+++ b/tf-horovod-inference/tf-horovod-inference.ipynb
@@ -81,7 +81,7 @@
     "\n",
     "We'll begin training a model on a single machine.  This will be followed by distributed training on multiple machines to allow comparison.  \n",
     "\n",
-    "It will helpful to review metrics about the training job such as memory utilization.  Amazon SageMaker will be able to get the metrics directly from the training job logs, and send them to CloudWatch Metrics."
+    "During training, it will helpful to review metric graphs about the training job such as validation accuracy.  If we provide a set of metric definitions, Amazon SageMaker will be able to get the metrics directly from the training job logs, and send them to CloudWatch Metrics."
    ]
   },
   {
@@ -90,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "keras_metric_definition = [\n",
+    "training_metric_definitions = [\n",
     "    {'Name': 'train:loss', 'Regex': '.*loss: ([0-9\\\\.]+) - acc: [0-9\\\\.]+.*'},\n",
     "    {'Name': 'train:accuracy', 'Regex': '.*loss: [0-9\\\\.]+ - acc: ([0-9\\\\.]+).*'},\n",
     "    {'Name': 'validation:accuracy', 'Regex': '.*step - loss: [0-9\\\\.]+ - acc: [0-9\\\\.]+ - val_loss: [0-9\\\\.]+ - val_acc: ([0-9\\\\.]+).*'},\n",
@@ -126,7 +126,7 @@
     "                       train_instance_count=1, \n",
     "                       train_instance_type=single_machine_instance_type,\n",
     "                       tags = [{'Key' : 'Project', 'Value' : 'cifar10'},{'Key' : 'TensorBoard', 'Value' : 'file'}],\n",
-    "                       metric_definitions=keras_metric_definition)"
+    "                       metric_definitions=training_metric_definitions)"
    ]
   },
   {
@@ -159,9 +159,13 @@
    "source": [
     "## Distributed training with Horovod\n",
     "\n",
-    "Horovod is an open source distributed training framework for TensorFlow, Keras, PyTorch, and MXNet. It is an alternative to the more \"traditional\" parameter server method of performing distributed training.  In Amazon SageMaker, Horovod is only available with TensorFlow version 1.12 or newer. \n",
+    "Horovod is an open source distributed training framework for TensorFlow, Keras, PyTorch, and MXNet. It is an alternative to the more \"traditional\" parameter server method of performing distributed training.  In Amazon SageMaker, Horovod is only available with TensorFlow version 1.12 or newer. Only a few lines of code are necessary to use Horovod for distributed training of a Keras model defined by the tf.keras API.  For details, see the `train.py` script included with this notebook; the changes primarily relate to:\n",
     "\n",
-    "First we'll set up an Amazon SageMaker TensorFlow Estimator object with the details of the training job.  It is very similar to an Estimator for training on a single machine, except we specify a `distributions` parameter describing Horovod attributes such as the number of process per host, which is set here to the number of GPUs per machine.  Beyond these few simple parameters and a few lines of code in the training script, there is nothing else you need to do to use distributed training with Horovod; Amazon SageMaker handles the heavy lifting for you and manages the underlying cluster setup."
+    "- importing Horovod.\n",
+    "- initializing Horovod.\n",
+    "- configuring GPU options and setting a Keras/tf.session with those options.\n",
+    "\n",
+    "Once we have a training script, the next step is to set up an Amazon SageMaker TensorFlow Estimator object with the details of the training job.  It is very similar to an Estimator for training on a single machine, except we specify a `distributions` parameter describing Horovod attributes such as the number of process per host, which is set here to the number of GPUs per machine.  Beyond these few simple parameters and the few lines of code in the training script, there is nothing else you need to do to use distributed training with Horovod; Amazon SageMaker handles the heavy lifting for you and manages the underlying cluster setup."
    ]
   },
   {
@@ -192,7 +196,7 @@
     "                       train_instance_count=hvd_instance_count, \n",
     "                       train_instance_type=hvd_instance_type,\n",
     "                       tags = [{'Key' : 'Project', 'Value' : 'cifar10'},{'Key' : 'TensorBoard', 'Value' : 'dist'}],\n",
-    "                       metric_definitions=keras_metric_definition,\n",
+    "                       metric_definitions=training_metric_definitions,\n",
     "                       distributions=distributions)"
    ]
   },
@@ -495,8 +499,7 @@
     "                total += 1\n",
     "    except e:\n",
     "        print(e)\n",
-    "        continue\n",
-    "        "
+    "        continue"
    ]
   },
   {
