mainly bug fixes and clarifications

--- a/tf-horovod-inference/tf-horovod-inference.ipynb
+++ b/tf-horovod-inference/tf-horovod-inference.ipynb
@@ -28,6 +28,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
+    "import numpy as np\n",
     "import os\n",
     "import sagemaker\n",
     "from sagemaker import get_execution_role\n",
@@ -77,11 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Amazon SageMaker hosted training on a single machine\n",
-    "\n",
-    "We'll begin training a model on a single machine.  This will be followed by distributed training on multiple machines to allow comparison.  \n",
-    "\n",
-    "During training, it will helpful to review metric graphs about the training job such as validation accuracy.  If we provide a set of metric definitions, Amazon SageMaker will be able to get the metrics directly from the training job logs, and send them to CloudWatch Metrics."
+    "Finally, we'll perform some setup that will be common to all of the training jobs in this notebook.  During training, it will helpful to review metric graphs about the training job such as validation accuracy.  If we provide a set of metric definitions, Amazon SageMaker will be able to get the metrics directly from the training job logs, and send them to CloudWatch Metrics."
    ]
   },
   {
@@ -103,7 +101,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next we'll set up an Amazon SageMaker TensorFlow Estimator object with the details of the training job, such as type and number of instances, hyperparameters, etc."
+    "## (Optional)  Hosted Training on a single machine\n",
+    "\n",
+    "Amazon SageMaker provides a variety of model training options:  besides training on a single machine, training can be done on a cluster of multiple machines using either parameter servers or Ring-AllReduce with Horovod.  We'll begin by training a model on a single machine.  This will be followed by distributed training on multiple machines to allow comparison; however if you prefer you may skip ahead to the **Distributed training** section of this notebook.\n",
+    "\n",
+    "Initially we'll set up an Amazon SageMaker TensorFlow Estimator object with the details of the training job, such as type and number of instances, hyperparameters, etc."
    ]
   },
   {
@@ -114,7 +116,7 @@
    "source": [
     "from sagemaker.tensorflow import TensorFlow\n",
     "\n",
-    "single_machine_instance_type = 'ml.p3.16xlarge'\n",
+    "single_machine_instance_type = 'ml.p3.2xlarge'\n",
     "hyperparameters = {'epochs': 60, 'batch-size' : 256}\n",
     "\n",
     "estimator_single = TensorFlow(base_job_name='cifar10-tf',\n",
@@ -150,7 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sometimes it makes sense to perform training on a single machine.  For large datasets, however, it may be necessary to perform distributed training on a cluster of multiple machines.  In fact, it may be not only faster but cheaper to do distributed training on several less costly machines rather than performing training on one large, expensive machine.  Fortunately, Amazon SageMaker makes it easy to run distributed training without having to manage cluster setup and tear down. "
+    "Sometimes it makes sense to perform training on a single machine.  For large datasets, however, it may be necessary to perform distributed training on a cluster of multiple machines.  In fact, it may be not only faster but cheaper to do distributed training on several machines rather than one machine.  Fortunately, Amazon SageMaker makes it easy to run distributed training without having to manage cluster setup and tear down. "
    ]
   },
   {
@@ -236,7 +238,7 @@
     "\n",
     "Amazon SageMaker provides both real time inference and batch inference.  Although we will focus on batch inference, let's start with a quick overview of setting up an Amazon SageMaker hosted endpoint for real time inference with TensorFlow Serving and image data.  The processes for setting up hosted endpoints and Batch Transform jobs have significant differences.  \n",
     "\n",
-    "We'll begin by looking at a sample of 10 images, one from each class."
+    "We'll begin by defining the label names and looking at a sample of 10 images, one from each class."
    ]
   },
   {
@@ -247,6 +249,7 @@
    "source": [
     "from IPython.display import Image, display\n",
     "\n",
+    "labels = ['airplane','automobile','bird','cat','deer','dog','frog','horse','ship','truck']\n",
     "images = []\n",
     "for entry in os.scandir('sample-img'):\n",
     "    if entry.is_file() and entry.name.endswith(\"png\"):\n",
@@ -269,7 +272,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import PIL\n",
     "from sagemaker.predictor import json_serializer, json_deserializer\n",
     "\n",
@@ -432,7 +434,7 @@
    "source": [
     "input_data_path = 's3://sagemaker-workshop-pdx/cifar-10-png' \n",
     "output_data_path = 's3://{}/{}/{}'.format(bucket, prefix, 'batch-predictions')\n",
-    "batch_instance_type = 'ml.p3.8xlarge'\n",
+    "batch_instance_type = 'ml.p3.2xlarge'\n",
     "batch_instance_count = 2\n",
     "\n",
     "transformer = sagemaker.transformer.Transformer(\n",
@@ -497,7 +499,7 @@
     "                if is_correct:\n",
     "                    correct += 1\n",
     "                total += 1\n",
-    "    except e:\n",
+    "    except Exception as e:\n",
     "        print(e)\n",
     "        continue"
    ]
