remove duplicate labels

--- a/tf-horovod-inference/tf-horovod-inference.ipynb
+++ b/tf-horovod-inference/tf-horovod-inference.ipynb
@@ -281,8 +281,6 @@
     "predictor.serializer = json_serializer\n",
     "predictor.deserializer = json_deserializer\n",
     "\n",
-    "labels = ['airplane','automobile','bird','cat','deer','dog','frog','horse','ship','truck']\n",
-    "\n",
     "def get_prediction(file_path):\n",
     "    \n",
     "    image = PIL.Image.open(file_path)\n",
@@ -366,7 +364,7 @@
     "!aws ecr set-repository-policy --repository-name $ecr_repository --policy-text \"$( cat ./image-transformer-container/ecr_policy.json )\"\n",
     "\n",
     "!docker tag {ecr_repository + tag} $transformer_repository_uri\n",
-    "!docker push $transformer_repository_uri\n"
+    "!docker push $transformer_repository_uri"
    ]
   },
   {
