remove duplicative line

--- a/tf-horovod-inference/tf-horovod-inference.ipynb
+++ b/tf-horovod-inference/tf-horovod-inference.ipynb
@@ -216,15 +216,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model Deployment with Elastic Inference\n",
+    "## Model Deployment with Amazon Elastic Inference\n",
     "\n",
-    "Amazon SageMaker provides both real time inference and batch inference.  Although we will focus on batch inference below, let's start with a quick overview of setting up an Amazon SageMaker hosted endpoint for real time inference with TensorFlow Serving and image data.  The processes for setting up hosted endpoints and Batch Transform jobs have significant differences.  Additionally, we will discuss why and how to use Elastic Inference with the hosted endpoint.\n",
+    "Amazon SageMaker provides both real time inference and batch inference.  Although we will focus on batch inference below, let's start with a quick overview of setting up an Amazon SageMaker hosted endpoint for real time inference with TensorFlow Serving and image data.  The processes for setting up hosted endpoints and Batch Transform jobs have significant differences.  Additionally, we will discuss why and how to use Amazon Elastic Inference with the hosted endpoint.\n",
     "\n",
     "### Deploying the Model\n",
     "\n",
     "When considering the overall cost of a machine learning workload, inference often is the largest part, up to 90% of the total.  If a GPU instance type is used for real time inference, it typically is not fully utilized because, unlike training, real time inference does not involve continuously inputting large batches of data to the model.  Elastic Inference provides GPU acceleration suited for inference, allowing you to add inference acceleration to a hosted endpoint for a fraction of the cost of using a full GPU instance.\n",
     "\n",
-    "The `deploy` method of the Estimator object creates an endpoint which serves prediction requests in near real time.  Only one line of code is necessary.  The only change required to utilize Elastic Inference with the SageMaker TensorFlow Serving containers is providing an `accelerator_type` parameter, which determines which type of accelerator attached to your endpoint. Refer to the Inference Acceleration section of the [instance types chart](https://aws.amazon.com/sagemaker/pricing/instance-types) for a listing of the supported types of accelerators. \n",
+    "The `deploy` method of the Estimator object creates an endpoint which serves prediction requests in near real time.  To utilize Elastic Inference with the SageMaker TensorFlow Serving container, simply provide an `accelerator_type` parameter, which determines the type of accelerator that is attached to your endpoint. Refer to the **Inference Acceleration** section of the [instance types chart](https://aws.amazon.com/sagemaker/pricing/instance-types) for a listing of the supported types of accelerators. \n",
     "\n",
     "Here we'll use a general purpose CPU compute instance type along with an Elastic Inference accelerator:  together they are much cheaper than the smallest P3 GPU instance type."
    ]
