eliminate single machine training

--- a/tf-horovod-preprocessing/tf-horovod-preprocessing.ipynb
+++ b/tf-horovod-preprocessing/tf-horovod-preprocessing.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#  TensorFlow Distributed Training & Distributed Inference \n",
+    "#  TensorFlow Distributed Training & Inference \n",
     "\n",
     "For use cases involving large datasets, particularly those where the data is images, it often is necessary to perform distributed training on a cluster of multiple machines. Similarly, when it is time to set up an inference workflow, it also may be necessary to perform highly performant batch inference using a cluster.  In this notebook, we'll examine distributed training and distributed inference with TensorFlow in Amazon SageMaker. \n",
     "\n",
@@ -79,88 +79,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we'll perform some setup that will be common to all of the training jobs in this notebook.  During training, it will helpful to review metric graphs about the training job such as validation accuracy.  If we provide a set of metric definitions, Amazon SageMaker will be able to get the metrics directly from the training job logs, and send them to CloudWatch Metrics."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "training_metric_definitions = [\n",
-    "    {'Name': 'train:loss', 'Regex': '.*loss: ([0-9\\\\.]+) - acc: [0-9\\\\.]+.*'},\n",
-    "    {'Name': 'train:accuracy', 'Regex': '.*loss: [0-9\\\\.]+ - acc: ([0-9\\\\.]+).*'},\n",
-    "    {'Name': 'validation:accuracy', 'Regex': '.*step - loss: [0-9\\\\.]+ - acc: [0-9\\\\.]+ - val_loss: [0-9\\\\.]+ - val_acc: ([0-9\\\\.]+).*'},\n",
-    "    {'Name': 'validation:loss', 'Regex': '.*step - loss: [0-9\\\\.]+ - acc: [0-9\\\\.]+ - val_loss: ([0-9\\\\.]+) - val_acc: [0-9\\\\.]+.*'},\n",
-    "    {'Name': 'sec/steps', 'Regex': '.* - \\d+s (\\d+)[mu]s/step - loss: [0-9\\\\.]+ - acc: [0-9\\\\.]+ - val_loss: [0-9\\\\.]+ - val_acc: [0-9\\\\.]+'}\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## (Optional)  Hosted Training on a single machine\n",
-    "\n",
-    "Amazon SageMaker provides a variety of model training options:  besides training on a single machine, training can be done on a cluster of multiple machines using either parameter servers or Ring-AllReduce with Horovod.  We'll begin by training a model on a single machine.  This will be followed by distributed training on multiple machines to allow comparison; however if you prefer you may skip ahead to the **Distributed training** section of this notebook.\n",
-    "\n",
-    "Initially we'll set up an Amazon SageMaker TensorFlow Estimator object with the details of the training job, such as type and number of instances, hyperparameters, etc."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sagemaker.tensorflow import TensorFlow\n",
-    "\n",
-    "single_machine_instance_type = 'ml.p3.2xlarge'\n",
-    "hyperparameters = {'epochs': 60, 'batch-size' : 256}\n",
-    "\n",
-    "estimator_single = TensorFlow(base_job_name='cifar10-tf',\n",
-    "                       source_dir='code',\n",
-    "                       entry_point='train.py',\n",
-    "                       role=role,\n",
-    "                       framework_version='1.12.0',\n",
-    "                       py_version='py3',\n",
-    "                       hyperparameters=hyperparameters,\n",
-    "                       train_instance_count=1, \n",
-    "                       train_instance_type=single_machine_instance_type,\n",
-    "                       tags = [{'Key' : 'Project', 'Value' : 'cifar10'},{'Key' : 'TensorBoard', 'Value' : 'file'}],\n",
-    "                       metric_definitions=training_metric_definitions)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now we can call the `fit` method of the Estimator object to start training.  During training, you can view the metrics we set up above by going to the Amazon SageMaker console, clicking the **Training jobs** link in the left panel, clicking the job name, then scrolling down to the **Monitor** section to view the metric graphs."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "remote_inputs = {'train' : inputs+'/train', 'validation' : inputs+'/validation', 'eval' : inputs+'/eval'}\n",
-    "estimator_single.fit(remote_inputs, wait=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Sometimes it makes sense to perform training on a single machine.  For large datasets, however, it may be necessary to perform distributed training on a cluster of multiple machines.  In fact, it may be not only faster but cheaper to do distributed training on several machines rather than one machine.  Fortunately, Amazon SageMaker makes it easy to run distributed training without having to manage cluster setup and tear down. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Distributed training with Horovod\n",
+    "\n",
+    "Sometimes it makes sense to perform training on a single machine. For large datasets, however, it may be necessary to perform distributed training on a cluster of multiple machines. In fact, it may be not only faster but cheaper to do distributed training on several machines rather than one machine. Fortunately, Amazon SageMaker makes it easy to run distributed training without having to manage cluster setup and tear down.  Distributed training can be done on a cluster of multiple machines using either parameter servers or Ring-AllReduce with Horovod. \n",
     "\n",
     "Horovod is an open source distributed training framework for TensorFlow, Keras, PyTorch, and MXNet. It is an alternative to the more \"traditional\" parameter server method of performing distributed training.  In Amazon SageMaker, Horovod is only available with TensorFlow version 1.12 or newer. Only a few lines of code are necessary to use Horovod for distributed training of a Keras model defined by the tf.keras API.  For details, see the `train.py` script included with this notebook; the changes primarily relate to:\n",
     "\n",
@@ -200,8 +121,14 @@
     "                       train_instance_count=hvd_instance_count, \n",
     "                       train_instance_type=hvd_instance_type,\n",
     "                       tags = [{'Key' : 'Project', 'Value' : 'cifar10'},{'Key' : 'TensorBoard', 'Value' : 'dist'}],\n",
-    "                       metric_definitions=training_metric_definitions,\n",
     "                       distributions=distributions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can call the `fit` method of the Estimator object to start training. After training completes, the tf.keras model will be saved in the SavedModel .pb format so it can be served by a TensorFlow Serving container.  Note that the model is only saved by the the master, rank = 0 process (disregard any warnings about the model not being saved by all the processes)."
    ]
   },
   {
