for inference pipeline notebook, pull in transform data from AWS regions

--- a/tf-horovod-inference-pipeline/tf-horovod-inference-pipeline.ipynb
+++ b/tf-horovod-inference-pipeline/tf-horovod-inference-pipeline.ipynb
@@ -429,7 +429,9 @@
    "source": [
     "### Run a Batch Transform job\n",
     "\n",
-    "Next, we'll run a Batch Transform job using our inference pipeline model. "
+    "Next, we'll run a Batch Transform job. More specifically, we'll perform distributed inference on a cluster of two instances.  As an additional optimization, we'll set the `max_concurrent_transforms` parameter of the Transformer object, which controls the maximum number of parallel requests that can be sent to each instance in a transform job.\n",
+    "\n",
+    "Note that the following will work only if you run this example in the AWS Regions specified in the prerequisites:  Ireland, N. Virginia, Ohio, and Oregon.  This is due to the fact that data for batch transform (like training data) must be stored in a S3 bucket in the same AWS Region as the resources performing the transform (or training).  "
    ]
   },
   {
@@ -438,15 +440,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_data_path = 's3://sagemaker-workshop-pdx/cifar-10-png' \n",
+    "input_data_path = 's3://sagemaker-workshop-{}/cifar-10-png'.format(sagemaker_session.boto_region_name) \n",
     "output_data_path = 's3://{}/{}/{}'.format(bucket, prefix, 'batch-predictions')\n",
     "batch_instance_type = 'ml.p3.2xlarge'\n",
     "batch_instance_count = 2\n",
+    "concurrency = 100\n",
     "\n",
     "transformer = sagemaker.transformer.Transformer(\n",
     "    model_name = model_name,\n",
     "    instance_count = batch_instance_count,\n",
     "    instance_type = batch_instance_type,\n",
+    "    max_concurrent_transforms = concurrency,\n",
     "    strategy = 'MultiRecord',\n",
     "    output_path = output_data_path,\n",
     "    assemble_with= 'Line',\n",
@@ -565,7 +569,7 @@
     "\n",
     "Although we did not demonstrate them in this notebook, Amazon SageMaker provides additional ways to make distributed training more efficient for very large datasets:\n",
     "- **VPC training**:  performing Horovod training inside a VPC improves the network latency between nodes, leading to higher performance and stability of Horovod training jobs.\n",
-    "- **Pipe Mode**:  using [Pipe Mode](https://docs.aws.amazon.com/sagemaker/latest/dg/your-algorithms-training-algo.html#your-algorithms-training-algo-running-container-inputdataconfig) reduces startup and training times.  Pipe Mode streams training data from S3 as a Linux FIFO directly to the algorithm, without saving to disk.  To use Pipe Mode, set `input_mode='Pipe'` for the Estimator object, and enable Pipe Mode within the training script by importing PipeModeDataset from the SageMaker Python SDK and setting `dataset = PipeModeDataset(channel=channel_name, record_format='TFRecord')` (see the train.py script for this example).  For a small dataset such as CIFAR-10, Pipe Mode does not provide any advantage, but for very large datasets Pipe Mode can substantially reduce startup and training times."
+    "- **Pipe Mode**:  using [Pipe Mode](https://docs.aws.amazon.com/sagemaker/latest/dg/your-algorithms-training-algo.html#your-algorithms-training-algo-running-container-inputdataconfig) reduces startup and training times.  Pipe Mode streams training data from S3 as a Linux FIFO directly to the algorithm, without saving to disk.  For a small dataset such as CIFAR-10, Pipe Mode does not provide any advantage, but for very large datasets where training is I/O bound rather than CPU/GPU bound, Pipe Mode can substantially reduce startup and training times."
    ]
   },
   {
