--- a/tf-horovod-inference-pipeline/tf-horovod-inference-pipeline.ipynb
+++ b/tf-horovod-inference-pipeline/tf-horovod-inference-pipeline.ipynb
@@ -429,9 +429,7 @@
    "source": [
     "### Run a Batch Transform job\n",
     "\n",
-    "Next, we'll run a Batch Transform job. More specifically, we'll perform distributed inference on a cluster of two instances.  As an additional optimization, we'll set the `max_concurrent_transforms` parameter of the Transformer object, which controls the maximum number of parallel requests that can be sent to each instance in a transform job.\n",
-    "\n",
-    "Note that the following will work only if you run this example in the AWS Regions specified in the prerequisites:  Ireland, N. Virginia, Ohio, and Oregon.  This is due to the fact that data for batch transform (like training data) must be stored in a S3 bucket in the same AWS Region as the resources performing the transform (or training).  "
+    "Next, we'll run a Batch Transform job. More specifically, we'll perform distributed inference on a cluster of two instances.  As an additional optimization, we'll set the `max_concurrent_transforms` parameter of the Transformer object, which controls the maximum number of parallel requests that can be sent to each instance in a transform job.\n"
    ]
   },
   {
@@ -440,7 +438,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_data_path = 's3://sagemaker-workshop-{}/cifar-10-png'.format(sagemaker_session.boto_region_name) \n",
+    "input_data_path = 's3://sagemaker-sample-data-{}/tensorflow/cifar10/images/png'.format(sagemaker_session.boto_region_name)\n",
+    "output_data_path = 's3://{}/{}/{}'.format(bucket, prefix, 'batch-predictions')\n"",
     "output_data_path = 's3://{}/{}/{}'.format(bucket, prefix, 'batch-predictions')\n",
     "batch_instance_type = 'ml.p3.2xlarge'\n",
     "batch_instance_count = 2\n",
