--- a/tf-horovod-preprocessing/tf-horovod-preprocessing.ipynb
+++ b/tf-horovod-preprocessing/tf-horovod-preprocessing.ipynb
@@ -145,102 +145,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model Deployment with Amazon Elastic Inference\n",
-    "\n",
-    "Amazon SageMaker provides both real time inference and batch inference.  Although we will focus on batch inference below, let's start with a quick overview of setting up an Amazon SageMaker hosted endpoint for real time inference with TensorFlow Serving (TFS).  The processes for setting up hosted endpoints and Batch Transform jobs have significant differences.  Additionally, we will discuss why and how to use Amazon Elastic Inference with the hosted endpoint.\n",
-    "\n",
-    "### Deploying the Model\n",
-    "\n",
-    "When considering the overall cost of a machine learning workload, inference often is the largest part, up to 90% of the total.  If a GPU instance type is used for real time inference, it typically is not fully utilized because, unlike training, real time inference does not involve continuously inputting large batches of data to the model.  Elastic Inference provides GPU acceleration suited for inference, allowing you to add inference acceleration to a hosted endpoint for a fraction of the cost of using a full GPU instance.\n",
-    "\n",
-    "The `deploy` method of the Estimator object creates an endpoint which serves prediction requests in near real time.  To utilize Elastic Inference with the SageMaker TFS container, simply provide an `accelerator_type` parameter, which determines the type of accelerator that is attached to your endpoint. Refer to the **Inference Acceleration** section of the [instance types chart](https://aws.amazon.com/sagemaker/pricing/instance-types) for a listing of the supported types of accelerators. \n",
-    "\n",
-    "Here we'll use a general purpose CPU compute instance type along with an Elastic Inference accelerator:  together they are much cheaper than the smallest P3 GPU instance type."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictor = estimator_dist.deploy(initial_instance_count=1,\n",
-    "                                  instance_type='ml.m5.xlarge',\n",
-    "                                  accelerator_type='ml.eia1.medium')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###  Real time inference\n",
-    "  \n",
-    "Now that we have a Predictor object wrapping a real time Amazon SageMaker hosted enpoint, we'll define the label names and look at a sample of 10 images, one from each class."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.display import Image, display\n",
-    "\n",
-    "labels = ['airplane','automobile','bird','cat','deer','dog','frog','horse','ship','truck']\n",
-    "images = []\n",
-    "for entry in os.scandir('sample-img'):\n",
-    "    if entry.is_file() and entry.name.endswith(\"png\"):\n",
-    "        images.append('sample-img/' + entry.name)\n",
-    "\n",
-    "for image in images:\n",
-    "    display(Image(image))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next we'll set up the Predictor object created by the `deploy` method call above.  The TFS container in Amazon SageMaker by default uses the TFS REST API, which requires requests in a specific JSON format.  However, for many use cases involving image data it is more convenient to have the client application send the image data directly to a real time endpoint for predictions without converting and preprocessing it on the cliet side. \n",
-    "\n",
-    "Fortunately, the Amazon SageMaker TFS container provides a data pre/post-processing feature that allows you to simply supply a data transformation script to to accomplish this.  We'll discuss this feature more in the Batch Transform section of this notebook.  For now, observe in the code cell below that with a preprocessing script in place, we just specify the Predictor's content type as `application/x-image` and override the default serializer, then we can simply provide the raw .png image bytes to the Predictor.  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictor.content_type = 'application/x-image'\n",
-    "predictor.serializer = None\n",
-    "\n",
-    "labels = ['airplane','automobile','bird','cat','deer','dog','frog','horse','ship','truck']\n",
-    "\n",
-    "def get_prediction(file_path):\n",
-    "    \n",
-    "    with open(file_path, \"rb\") as image:\n",
-    "        f = image.read()\n",
-    "    b = bytearray(f)\n",
-    "    return labels[np.argmax(predictor.predict(b)['predictions'], axis=1)[0]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictions = [get_prediction(image) for image in images]\n",
-    "print(predictions)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "##  Batch Transform with TFS pre/post-processing scripts\n",
     "\n",
-    "If a use case does not require individual predictions in near real-time, an Amazon SageMaker Batch Transform job is likely a better alternative. Although hosted endpoints also can be used for pseudo-batch prediction, the process is more involved than using the alternative Batch Transform, which is designed for large-scale, asynchronous batch inference.\n",
+    "Amazon SageMaker lets you deploy a model to an endpoint for real-time inferences, or create a Transform Job for offline inference. If a use case does not require individual predictions in near real-time, an Amazon SageMaker Batch Transform job is likely a better alternative. Although hosted endpoints also can be used for pseudo-batch prediction, the process is more involved than using the alternative Batch Transform, which is designed for large-scale, asynchronous batch inference.\n",
     "\n",
     "A typical problem in working with batch inference is how to convert data into tensors that can be input to the model.  For example, image data in .png or .jpg format cannot be directly input to a model, but rather must be converted first.  Additionally, sometimes other preprocessing of the data must be performed, such as resizing.  The Amazon SageMaker TFS container provides facilities for doing this efficiently.  "
    ]
@@ -251,7 +158,7 @@
    "source": [
     "### Pre/post-postprocessing script\n",
     "\n",
-    "As mentioned above, the TFS container in Amazon SageMaker by default uses the REST API to serve prediction requests. This requires the input data to be converted to JSON format.  One way to do this is to create a Docker container to do the conversion, then create an overall Amazon SageMaker model that links the conversion container to the TensorFlow Serving container with the model. This is known as an Amazon SageMaker Inference Pipeline, as demonstrated in another [sample notebook](https://github.com/awslabs/amazon-sagemaker-examples/tree/master/advanced_functionality/working_with_tfrecords).  \n",
+    "The TFS container in Amazon SageMaker by default uses the REST API to serve prediction requests. This requires the input data to be converted to JSON format.  One way to do this is to create a Docker container to do the conversion, then create an overall Amazon SageMaker model that links the conversion container to the TensorFlow Serving container with the model. This is known as an Amazon SageMaker Inference Pipeline, as demonstrated in another [sample notebook](https://github.com/awslabs/amazon-sagemaker-examples/tree/master/advanced_functionality/working_with_tfrecords).  \n",
     "\n",
     "However, as a more convenient alternative for many use cases, the Amazon SageMaker TFS container provides a data pre/post-processing script feature that allows you to simply supply a data transformation script.  Using such a script, there is no need to build containers or directly work with Docker.  The simplest form of a script must only implement an `input_handler` and `output_handler` interface, as shown in the code below, be named `inference.py`, and be placed in a `/code` directory."
    ]
@@ -318,7 +225,7 @@
     "                         framework_version=estimator.framework_version,\n",
     "                         sagemaker_session=estimator.sagemaker_session)\n",
     "\n",
-    "batch_instance_type = 'ml.p3.2xlarge'\n",
+    "\n",
     "tf_serving_container = tf_serving_model.prepare_container_def(batch_instance_type)\n",
     "model_params = {\n",
     "    \"ModelName\": model_name,\n",
@@ -337,7 +244,11 @@
    "source": [
     "### Run a Batch Transform job\n",
     "\n",
-    "Next, we'll run a Batch Transform job using our data processing script and GPU-based Amazon SageMaker Model. More specifically, we'll perform distributed inference on a cluster of two instances.  As an additional optimization, we'll set the `max_concurrent_transforms` parameter of the Transformer object, which controls the maximum number of parallel requests that can be sent to each instance in a transform job."
+    "Next, we'll run a Batch Transform job using our data processing script and GPU-based Amazon SageMaker Model. More specifically, we'll perform inference on a cluster of two instances.\n",
+    "\n",
+    "The code below creates a SageMaker Model entity that will be used for Batch inference, and runs a Transform Job using that Model. The Model contains a reference to the TFS container, the TensorFlow SavedModel we trained above, the pre- and post-processing script, and the `requirements.txt` file.\n",
+    "\n",
+    "As additional optimizations, we'll set the `max_concurrent_transforms` and `max_payload` parameters of the Transformer object, which controls the maximum number of parallel requests that can be sent to each instance in a transform job and the maximum size of each request body. Since we are not splitting our input S3 objects by newline characters, requests will contain entire S3 objects. Accordingly, it is recommended that you set `max_payload` to be larger than the largest S3 object in your dataset. It is recommended that you experiment with the `max_concurrent_transforms` parameter in powers of two to find a value that maximizes throughput for your model."
    ]
   },
   {
@@ -346,24 +257,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_data_path = 's3://sagemaker-sample-data-{}/tensorflow/cifar10/images/png'.format(sagemaker_session.boto_region_name)\n",
-    "output_data_path = 's3://{}/{}/{}'.format(bucket, prefix, 'batch-predictions')\n",
-    "batch_instance_count = 2\n",
-    "concurrency = 100\n",
+    "input_data_path='s3://sagemaker-sample-data-{}/tensorflow/cifar10/images/png'.format(sagemaker_session.boto_region_name)\n",
+    "output_data_path='s3://{}/{}/{}'.format(bucket, prefix, 'batch-predictions')\n",
+    "batch_instance_count=2\n",
+    "concurrency=32\n",
+    "max_payload_in_mb=1\n",
     "\n",
-    "transformer = sagemaker.transformer.Transformer(\n",
-    "    model_name = model_name,\n",
-    "    instance_count = batch_instance_count,\n",
-    "    instance_type = batch_instance_type,\n",
-    "    max_concurrent_transforms = concurrency,\n",
-    "    strategy = 'MultiRecord',\n",
-    "    output_path = output_data_path,\n",
-    "    assemble_with= 'Line',\n",
+    "batch_instance_type = 'ml.p2.xlarge'\n",
+    "\n",
+    "transformer = estimator_dist.transformer(\n",
+    "    model_name=model_name,\n",
+    "    instance_count=batch_instance_count,\n",
+    "    instance_type=batch_instance_type,\n",
+    "    max_concurrent_transforms=concurrency,\n",
+    "    max_payload=max_payload_in_mb,\n",
+    "    output_path=output_data_path,\n",
     "    base_transform_job_name='cifar-10-image-transform',\n",
     "    sagemaker_session=sagemaker_session,\n",
     ")\n",
     "\n",
-    "transformer.transform(data = input_data_path, content_type = 'application/x-image')\n",
+    "transformer.transform(data=input_data_path, content_type='application/x-image')\n",
     "transformer.wait()"
    ]
   },
@@ -470,6 +383,99 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Model Deployment with Amazon Elastic Inference\n",
+    "\n",
+    "Amazon SageMaker provides both real time inference and batch inference.  Although we will focus on batch inference below, let's start with a quick overview of setting up an Amazon SageMaker hosted endpoint for real time inference with TensorFlow Serving (TFS).  The processes for setting up hosted endpoints and Batch Transform jobs have significant differences.  Additionally, we will discuss why and how to use Amazon Elastic Inference with the hosted endpoint.\n",
+    "\n",
+    "### Deploying the Model\n",
+    "\n",
+    "When considering the overall cost of a machine learning workload, inference often is the largest part, up to 90% of the total.  If a GPU instance type is used for real time inference, it typically is not fully utilized because, unlike training, real time inference does not involve continuously inputting large batches of data to the model.  Elastic Inference provides GPU acceleration suited for inference, allowing you to add inference acceleration to a hosted endpoint for a fraction of the cost of using a full GPU instance.\n",
+    "\n",
+    "The `deploy` method of the Estimator object creates an endpoint which serves prediction requests in near real time.  To utilize Elastic Inference with the SageMaker TFS container, simply provide an `accelerator_type` parameter, which determines the type of accelerator that is attached to your endpoint. Refer to the **Inference Acceleration** section of the [instance types chart](https://aws.amazon.com/sagemaker/pricing/instance-types) for a listing of the supported types of accelerators. \n",
+    "\n",
+    "Here we'll use a general purpose CPU compute instance type along with an Elastic Inference accelerator:  together they are much cheaper than the smallest P3 GPU instance type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictor = estimator_dist.deploy(initial_instance_count=1,\n",
+    "                                  instance_type='ml.m5.xlarge',\n",
+    "                                  accelerator_type='ml.eia1.medium')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  Real time inference\n",
+    "  \n",
+    "Now that we have a Predictor object wrapping a real time Amazon SageMaker hosted enpoint, we'll define the label names and look at a sample of 10 images, one from each class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import Image, display\n",
+    "\n",
+    "labels = ['airplane','automobile','bird','cat','deer','dog','frog','horse','ship','truck']\n",
+    "images = []\n",
+    "for entry in os.scandir('sample-img'):\n",
+    "    if entry.is_file() and entry.name.endswith(\"png\"):\n",
+    "        images.append('sample-img/' + entry.name)\n",
+    "\n",
+    "for image in images:\n",
+    "    display(Image(image))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we'll set up the Predictor object created by the `deploy` method call above.  The TFS container in Amazon SageMaker by default uses the TFS REST API, which requires requests in a specific JSON format.  However, for many use cases involving image data it is more convenient to have the client application send the image data directly to a real time endpoint for predictions without converting and preprocessing it on the cliet side. \n",
+    "\n",
+    "Fortunately, the Amazon SageMaker TFS container provides a data pre/post-processing feature that allows you to simply supply a data transformation script to to accomplish this.  We'll discuss this feature more in the Batch Transform section of this notebook.  For now, observe in the code cell below that with a preprocessing script in place, we just specify the Predictor's content type as `application/x-image` and override the default serializer, then we can simply provide the raw .png image bytes to the Predictor.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictor.content_type = 'application/x-image'\n",
+    "predictor.serializer = None\n",
+    "\n",
+    "labels = ['airplane','automobile','bird','cat','deer','dog','frog','horse','ship','truck']\n",
+    "\n",
+    "def get_prediction(file_path):\n",
+    "    \n",
+    "    with open(file_path, \"rb\") as image:\n",
+    "        f = image.read()\n",
+    "    b = bytearray(f)\n",
+    "    return labels[np.argmax(predictor.predict(b)['predictions'], axis=1)[0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = [get_prediction(image) for image in images]\n",
+    "print(predictions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Extensions\n",
     "\n",
     "Although we did not demonstrate them in this notebook, Amazon SageMaker provides additional ways to make distributed training more efficient for very large datasets:\n",
@@ -499,9 +505,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_tensorflow_p36",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_tensorflow_p36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
