--- a/tf-horovod-preprocessing/tf-horovod-preprocessing.ipynb
+++ b/tf-horovod-preprocessing/tf-horovod-preprocessing.ipynb
@@ -201,54 +201,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create GPU Model\n",
-    "\n",
-    "When we deployed the model above to an Amazon SageMaker real time endpoint, we deployed to a CPU-based instance type, along with an attached Elastic Inference accelerator to which parts of the model computation graph are offloaded.  Under the hood a CPU-based Amazon SageMaker Model object was created to wrap a CPU-based TFS container.  However, for Batch Transform on a large dataset, we would prefer to use full GPU instances.  To do this, we need to create another Model object that will utilize a GPU-based TFS container.  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import boto3\n",
-    "from sagemaker.tensorflow.serving import Model\n",
-    "from time import gmtime, strftime\n",
-    "\n",
-    "client = boto3.client('sagemaker')\n",
-    "model_name = \"dist-cifar10-tf-gpu-{}\".format(strftime(\"%d-%H-%M-%S\", gmtime()))\n",
-    "estimator = estimator_dist\n",
-    "tf_serving_model = Model(model_data=estimator.model_data,\n",
-    "                         role=sagemaker.get_execution_role(),\n",
-    "                         image=estimator.image_name,\n",
-    "                         framework_version=estimator.framework_version,\n",
-    "                         sagemaker_session=estimator.sagemaker_session)\n",
-    "\n",
-    "\n",
-    "tf_serving_container = tf_serving_model.prepare_container_def(batch_instance_type)\n",
-    "model_params = {\n",
-    "    \"ModelName\": model_name,\n",
-    "    \"Containers\": [\n",
-    "        tf_serving_container\n",
-    "    ],\n",
-    "    \"ExecutionRoleArn\": sagemaker.get_execution_role()\n",
-    "}\n",
-    "\n",
-    "client.create_model(**model_params)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Run a Batch Transform job\n",
     "\n",
-    "Next, we'll run a Batch Transform job using our data processing script and GPU-based Amazon SageMaker Model. More specifically, we'll perform inference on a cluster of two instances.\n",
+    "Next, we'll run a Batch Transform job using our data processing script and GPU-based Amazon SageMaker Model. More specifically, we'll perform inference on a cluster of two instances. The objects in the S3 path will be distributed between the two instances. In this example, our input can't be split by newline characters and batched together, so the cluster will receive one HTTP request per serialized image.\n",
     "\n",
     "The code below creates a SageMaker Model entity that will be used for Batch inference, and runs a Transform Job using that Model. The Model contains a reference to the TFS container, the TensorFlow SavedModel we trained above, the pre- and post-processing script, and the `requirements.txt` file.\n",
     "\n",
-    "As additional optimizations, we'll set the `max_concurrent_transforms` and `max_payload` parameters of the Transformer object, which controls the maximum number of parallel requests that can be sent to each instance in a transform job and the maximum size of each request body. Since we are not splitting our input S3 objects by newline characters, requests will contain entire S3 objects. Accordingly, it is recommended that you set `max_payload` to be larger than the largest S3 object in your dataset. It is recommended that you experiment with the `max_concurrent_transforms` parameter in powers of two to find a value that maximizes throughput for your model."
+    "For improved performance, we'll set the `max_concurrent_transforms` and `max_payload` parameters of the Transformer object, which controls the maximum number of parallel requests that can be sent to each instance in a transform job and the maximum size of each request body.\n",
+    "\n",
+    "When performing inference on entire, unsplit S3 objects, it is recommended that you set `max_payload` to be slightly larger than the largest S3 object in your dataset, and that you experiment with the `max_concurrent_transforms` parameter in powers of two to find a value that maximizes throughput for your model."
    ]
   },
   {
@@ -257,23 +218,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sagemaker.tensorflow.serving import Model\n",
+    "\n",
+    "tensorflow_serving_model = Model(model_data=estimator_dist.model_data,\n",
+    "                                 role=role,\n",
+    "                                 entry_point='inference.py',\n",
+    "                                 source_dir='code',\n",
+    "                                 framework_version='1.12',\n",
+    "                                 sagemaker_session=sagemaker_session)\n",
+    "\n",
     "input_data_path='s3://sagemaker-sample-data-{}/tensorflow/cifar10/images/png'.format(sagemaker_session.boto_region_name)\n",
     "output_data_path='s3://{}/{}/{}'.format(bucket, prefix, 'batch-predictions')\n",
     "batch_instance_count=2\n",
+    "batch_instance_type = 'ml.p2.xlarge'\n",
     "concurrency=32\n",
     "max_payload_in_mb=1\n",
     "\n",
-    "batch_instance_type = 'ml.p2.xlarge'\n",
-    "\n",
-    "transformer = estimator_dist.transformer(\n",
-    "    model_name=model_name,\n",
+    "transformer = tensorflow_serving_model.transformer(\n",
     "    instance_count=batch_instance_count,\n",
     "    instance_type=batch_instance_type,\n",
     "    max_concurrent_transforms=concurrency,\n",
     "    max_payload=max_payload_in_mb,\n",
-    "    output_path=output_data_path,\n",
-    "    base_transform_job_name='cifar-10-image-transform',\n",
-    "    sagemaker_session=sagemaker_session,\n",
+    "    output_path=output_data_path\n",
     ")\n",
     "\n",
     "transformer.transform(data=input_data_path, content_type='application/x-image')\n",
@@ -311,7 +277,7 @@
     "correct = 0\n",
     "predicted = []\n",
     "actual = []\n",
-    "\n",
+    "labels = ['airplane','automobile','bird','cat','deer','dog','frog','horse','ship','truck']\n",
     "for entry in os.scandir('batch_predictions'):\n",
     "    try:\n",
     "        if entry.is_file() and entry.name.endswith(\"out\"):\n",
@@ -385,7 +351,7 @@
    "source": [
     "## Model Deployment with Amazon Elastic Inference\n",
     "\n",
-    "Amazon SageMaker provides both real time inference and batch inference.  Although we will focus on batch inference below, let's start with a quick overview of setting up an Amazon SageMaker hosted endpoint for real time inference with TensorFlow Serving (TFS).  The processes for setting up hosted endpoints and Batch Transform jobs have significant differences.  Additionally, we will discuss why and how to use Amazon Elastic Inference with the hosted endpoint.\n",
+    "Amazon SageMaker also lets you deploy a TensorFlow Serving model to a hosted Endpoint for real-time inference. The processes for setting up hosted endpoints and Batch Transform jobs have significant differences.  Additionally, we will discuss why and how to use Amazon Elastic Inference with the hosted endpoint.\n",
     "\n",
     "### Deploying the Model\n",
     "\n",
@@ -403,6 +369,7 @@
    "outputs": [],
    "source": [
     "predictor = estimator_dist.deploy(initial_instance_count=1,\n",
+    "                                  framework_version='1.12',\n",
     "                                  instance_type='ml.m5.xlarge',\n",
     "                                  accelerator_type='ml.eia1.medium')"
    ]
@@ -413,7 +380,7 @@
    "source": [
     "###  Real time inference\n",
     "  \n",
-    "Now that we have a Predictor object wrapping a real time Amazon SageMaker hosted enpoint, we'll define the label names and look at a sample of 10 images, one from each class."
+    "Now that we have a Predictor object wrapping a real time Amazon SageMaker hosted endpoint, we'll define the label names and look at a sample of 10 images, one from each class."
    ]
   },
   {
@@ -424,7 +391,6 @@
    "source": [
     "from IPython.display import Image, display\n",
     "\n",
-    "labels = ['airplane','automobile','bird','cat','deer','dog','frog','horse','ship','truck']\n",
     "images = []\n",
     "for entry in os.scandir('sample-img'):\n",
     "    if entry.is_file() and entry.name.endswith(\"png\"):\n",
@@ -505,9 +471,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "conda_tensorflow_p36",
    "language": "python",
-   "name": "python3"
+   "name": "conda_tensorflow_p36"
   },
   "language_info": {
    "codemirror_mode": {
