notebook revised for training history

--- a/tf-distribution-options/tf-distributed-training.ipynb
+++ b/tf-distribution-options/tf-distributed-training.ipynb
@@ -85,7 +85,7 @@
    "source": [
     "## Distributed Training with Parameter Servers\n",
     "\n",
-    "A common pattern in distributed training is to use dedicated processes to collect gradients computed by “worker” processes, then aggregate them and distribute the updated gradients back to the workers asynchronously. These processes are known as parameter servers. In general, they can be run either on their own machines or co-located on the same machines as the workers. In a parameter server cluster, each parameter server communicates with all workers (“all-to-all”). The Amazon SageMaker prebuilt TensorFlow container comes with a built-in option to use parameter servers for distributed training. The container runs a parameter server thread in each training instance, so there is a 1:1 ratio of parameter servers to workers.\n",
+    "A common pattern in distributed training is to use dedicated processes to collect gradients computed by “worker” processes, then aggregate them and distribute the updated gradients back to the workers. These processes are known as parameter servers. In general, they can be run either on their own machines or co-located on the same machines as the workers. In a parameter server cluster, each parameter server communicates with all workers (“all-to-all”). The Amazon SageMaker prebuilt TensorFlow container comes with a built-in option to use parameter servers for distributed training. The container runs a parameter server thread in each training instance, so there is a 1:1 ratio of parameter servers to workers. With this built-in option, gradient updates are made asynchronously (though some other versions of parameters servers use synchronous updates). \n",
     "\n",
     "Once we have a training script (see `train_ps.py` in the /code directory), the next step is to set up an Amazon SageMaker TensorFlow Estimator object with the details of the training job.  It is very similar to an Estimator for training on a single machine, except we specify a `distributions` parameter to enable starting a parameter server on each training instance. "
    ]
@@ -137,6 +137,72 @@
    "source": [
     "remote_inputs = {'train' : inputs+'/train', 'validation' : inputs+'/validation', 'eval' : inputs+'/eval'}\n",
     "estimator_ps.fit(remote_inputs, wait=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After training is complete, it is always a good idea to take a look at training curves to diagnose problems, if any, during training and determine how representative the training and validation datasets are.  We can do this with TensorBoard, and also with the Keras API: conveniently, the Keras `fit` invocation returns a data structure with the training history. In our training script, this history is saved on the first training node, then uploaded with the model when training is complete.\n",
+    "\n",
+    "To retrieve the history, we first download the model locally, then unzip it to gain access to the history data structure. We can then simply load the history as JSON:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json \n",
+    "\n",
+    "!aws s3 cp {estimator_ps.model_data} ./ps_model/model.tar.gz\n",
+    "!tar -xzf ./ps_model/model.tar.gz -C ./ps_model\n",
+    "\n",
+    "with open('./ps_model/ps_history.p', \"r\") as f:\n",
+    "    ps_history = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can plot the history with two graphs, one for accuracy and another for loss. Each graph shows the results for both the training and validation datasets. Although training is a stochastic process that can vary significantly between training jobs, overall you are likely to see that the training curves are converging nicely to higher accuracy and lower loss, while the validation curves are more jagged. This is due to the validation dataset being relatively small and thus not as representative as the training dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def plot_training_curves(history): \n",
+    "    \n",
+    "    fig, axes = plt.subplots(1, 2, figsize=(12, 4), sharex=True)\n",
+    "    ax = axes[0]\n",
+    "    ax.plot(history['acc'], label='train')\n",
+    "    ax.plot(history['val_acc'], label='validation')\n",
+    "    ax.set(\n",
+    "        title='model accuracy',\n",
+    "        ylabel='accuracy',\n",
+    "        xlabel='epoch',\n",
+    "        yticks=np.arange(0.1,1.0,0.1))\n",
+    "    ax.legend()\n",
+    "\n",
+    "    ax = axes[1]\n",
+    "    ax.plot(history['loss'], label='train')\n",
+    "    ax.plot(history['val_loss'], label='validation')\n",
+    "    ax.set(\n",
+    "        title='model loss',\n",
+    "        ylabel='loss',\n",
+    "        xlabel='epoch',\n",
+    "        yticks=np.arange(0.2,2.2,0.2))\n",
+    "    ax.legend()\n",
+    "    fig.tight_layout()\n",
+    "    \n",
+    "plot_training_curves(ps_history)"
    ]
   },
   {
@@ -211,7 +277,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that both training jobs are complete, we can compare the results.  The CIFAR-10 dataset is relatively small so the training jobs do not run long enough to draw detailed conclusions. However, it is likely that you can observe some differences even though training time was short and training is a stochastic process.  The Horovod training job tends to take a bit longer than the parameter server training job, while producing a slightly more accurate model. This is consistent with research showing that Horovod is more performant for larger clusters and models, while parameter servers have the edge for smaller clusters and models. Also, asynchronous updates can result in slower convergence to more accurate models. "
+    "Now that both training jobs are complete, we can compare the results.  The CIFAR-10 dataset is relatively small so the training jobs do not run long enough to draw detailed conclusions. However, it is likely that you can observe some differences even though training time was short, and training is a stochastic process with different results every time. The training time can be approximated for our purposes by looking at the \"Billable seconds\" log output at the end of each training job (at the bottom of the log output beneath the `fit` invocation code cells).\n",
+    "\n",
+    "The Horovod training job tends to take a bit longer than the parameter server training job, while producing a somewhat more accurate model. The relative speed result is consistent with research showing that Horovod is more performant for larger clusters and models, while parameter servers have the edge for smaller clusters and models such as this one. Also, asynchronous model updates like those used by the parameter servers here require more epochs to converge to more accurate models, so it is not surprising if the parameter server model trained faster but was less accurate. "
    ]
   },
   {
@@ -320,7 +388,7 @@
    "source": [
     "### Make Predictions\n",
     "\n",
-    "Next we'll set up the Predictor object created by the `deploy` method call above. Since we are using a preprocessing script, we need to specify the Predictor's content type as `application/x-image` and override the default (JSON) serializer. We can now get predictions simply by providing the raw .png image bytes to the Predictor.  "
+    "Next we'll set up the Predictor object created by the `deploy` method call above. Since we are using a preprocessing script, we need to specify the Predictor's content type as `application/x-image` and override the default (JSON) serializer. We can now get predictions about the sample data displayed above simply by providing the raw .png image bytes to the Predictor.  "
    ]
   },
   {
