training curves for Horovod, update to tf 1.13

--- a/tf-distribution-options/tf-distributed-training.ipynb
+++ b/tf-distribution-options/tf-distributed-training.ipynb
@@ -112,7 +112,7 @@
     "                       source_dir='code',\n",
     "                       entry_point='train_ps.py', \n",
     "                       role=role,\n",
-    "                       framework_version='1.12.0',\n",
+    "                       framework_version='1.13',\n",
     "                       py_version='py3',\n",
     "                       hyperparameters=hyperparameters,\n",
     "                       train_instance_count=ps_instance_count, \n",
@@ -263,7 +263,7 @@
     "                       source_dir='code',\n",
     "                       entry_point='train_hvd.py', \n",
     "                       role=role,\n",
-    "                       framework_version='1.12.0',\n",
+    "                       framework_version='1.13',\n",
     "                       py_version='py3',\n",
     "                       hyperparameters=hyperparameters,\n",
     "                       train_instance_count=hvd_instance_count, \n",
@@ -293,9 +293,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We can now plot training curves for the Horovod training job similar to the curves we plotted for the parameter servers training job:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!aws s3 cp {estimator_hvd.model_data} ./hvd_model/model.tar.gz\n",
+    "!tar -xzf ./hvd_model/model.tar.gz -C ./hvd_model\n",
+    "\n",
+    "with open('./hvd_model/hvd_history.p', \"r\") as f:\n",
+    "    hvd_history = json.load(f)\n",
+    "    \n",
+    "plot_training_curves(hvd_history)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Now that both training jobs are complete, we can compare the results.  The CIFAR-10 dataset is relatively small so the training jobs do not run long enough to draw detailed conclusions. However, it is likely that you can observe some differences even though training time was short, and training is a stochastic process with different results every time. The training time can be approximated for our purposes by looking at the \"Billable seconds\" log output at the end of each training job (at the bottom of the log output beneath the `fit` invocation code cells).\n",
     "\n",
-    "The Horovod training job tends to take a bit longer than the parameter server training job, while producing a somewhat more accurate model. The relative speed result is consistent with research showing that Horovod is more performant for larger clusters and models, while parameter servers have the edge for smaller clusters and models such as this one. Also, asynchronous model updates like those used by the parameter servers here require more epochs to converge to more accurate models, so it is not surprising if the parameter server model training completed faster for the same number of epochs as Horovord, but was less accurate. "
+    "The Horovod training job tends to take a bit longer than the parameter server training job, while producing a somewhat more accurate model. The relative speed result is consistent with research showing that Horovod is more performant for larger clusters and models, while parameter servers have the edge for smaller clusters and models such as this one. Also, asynchronous model updates like those used by the parameter servers here require more epochs to converge to more accurate models, so it is not surprising if the parameter server model training completed faster for the same number of epochs as Horovord, but was less accurate. It also is likely that you can observe that the training curves for the Horovod training job are a bit smoother, reflecting the fact that synchronous gradient updates typically are less noisy than asynchronous updates."
    ]
   },
   {
@@ -359,7 +381,7 @@
    "source": [
     "### Pre/post-postprocessing Script\n",
     "\n",
-    "The TFS container in Amazon SageMaker by default uses the TFS REST API to serve prediction requests. This requires the input data to be converted to JSON format.  One way to do this is to create a Docker container to do the conversion, then create an overall Amazon SageMaker model that links the conversion container to the TFS container with the model. This is known as an Amazon SageMaker Inference Pipeline, as demonstrated in another [sample notebook](https://github.com/awslabs/amazon-sagemaker-examples/tree/master/advanced_functionality/working_with_tfrecords).  \n",
+    "The TFS container in Amazon SageMaker by default uses the TFS REST API to serve prediction requests. This requires the input data to be converted to JSON format.  One way to do this is to create a Docker container to do the conversion, then create an overall Amazon SageMaker model that links the conversion container to the TFS container with the model. This is known as an Amazon SageMaker Inference Pipeline, as demonstrated in another [sample notebook](https://github.com/awslabs/amazon-sagemaker-examples/tree/master/sagemaker_batch_transform/working_with_tfrecords).  \n",
     "\n",
     "However, as a more convenient alternative for many use cases, the Amazon SageMaker TFS container provides a data pre/post-processing script feature that allows you to simply supply a data transformation script.  Using such a script, there is no need to build containers or directly work with Docker.  The simplest form of a script must only (1) implement an `input_handler` and `output_handler` interface, as shown in the code below, (2) be named `inference.py`, and (3) be placed in a `/code` directory."
    ]
